--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
@@ -59,7 +59,7 @@
         <div id="content">
 
             <paper-card id="erg">
-                <crew-team-manager-avatar id="erg-avatar" large></crew-team-manager-avatar>
+                <crew-team-manager-avatar id="erg-avatar" class="erg-avatar" value="[[data.number]] % 10" large></crew-team-manager-avatar>
                 <div id="erg-number">
                     [[data.number]]
                 </div>
