--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list.html
@@ -76,9 +76,9 @@
 
             <app-header slot="header" reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
+                    <paper-icon-button id="back" icon="arrow-back"="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Select Riggers To Add</div>
-                    <paper-icon-button id="add" icon="check" on-click="_handleActionAdd"></paper-icon-button>
+                    <paper-icon-button id="add" icon="check"="_handleActionAdd"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
