--- a/elements/crew-team-manager-picture/crew-team-manager-picture-list-loading.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-list-loading.html
@@ -23,7 +23,7 @@
         }
         </style>
 
-        <div id="layout" on-click="_handleClick">
+        <div id="layout" on-tap="_handleClick">
             <paper-spinner-lite active id="spinner"></paper-spinner-lite>
         </div>
 
