--- a/elements/crew-team-manager-picture/crew-team-manager-picture-list-results.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-list-results.html
@@ -27,6 +27,13 @@
                 border-right: solid 1px grey;
             }
 
+            .picture-selected {
+                background-color: #ddd;
+                @apply(--layout-horizontal);
+                border-bottom: solid 1px grey;
+                border-right: solid 1px grey;
+            }
+
             .picture-avatar {
                 margin: 8px;
             }
@@ -44,14 +51,35 @@
             .picture-info-location {
                 @apply(--paper-font-caption);
             }
+
+            .picture-avatar[reveal],
+            .check-avatar {
+                display: none;
+            }
+
+            .picture-avatar,
+            .check-avatar[reveal] {
+                display: inline-block;
+            }
+
+            .check-avatar[reveal] {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                margin: 8px;
+                width: 32px;
+                height: 32px;
+                border-radius: 50%;
+                background-color: #A3A3A3;
+            }
         </style>
 
-        <iron-list id="list" items="[[data]]" as="item" grid>
+        <iron-list id="list" items="[[data]]" as="item" grid selected-items="{{deleteItems}}" selection-enabled multi-selection>
             <template>
-                <div class="picture" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]">
 
-                    <crew-team-manager-avatar class="picture-avatar" value="[[item.caption]]"></crew-team-manager-avatar>
-                    <div class="picture-info">
+                    <crew-team-manager-avatar class="picture-avatar" reveal$="[[_isCheck(selected)]]" value="[[item.caption]]" on-tap="_handleActionDeleteMultiple"></crew-team-manager-avatar>
+                    <paper-icon-button class="check-avatar" reveal$="[[_isCheck(selected)]]" icon="check"></paper-icon-button>
+                    <div class="picture-info" on-tap="_handleItemClick">
                         <div class="picture-info-caption">
                             [[item.caption]]
                         </div>
@@ -72,12 +100,62 @@
                 return 'crew-team-manager-picture-list-results'
             }
 
+            static get observers() {
+                return [
+                    '_selectedChange(selected)'
+                ]
+            }
+
             static get properties() {
                 return {
                     data: {
                         type: Object,
+                    },
+
+                    deleteItems: {
+                        type: Object,
+                        value: {}
+                    },
+
+                    selected: Boolean
+
+                }
+            }
+
+            _computedClass(isSelected) {
+                let classes = 'picture';
+                if (isSelected) {
+                    classes += '-selected';
+                }
+                return classes;
+            }
+
+            _isCheck(isSelected) {
+                let value = false;
+                if (isSelected) {
+                    value = true;
+                }
+
+                return value;
+            }
+
+            _selectedChange(selected) {
+                if (!selected) {
+                    while (this.deleteItems.length > 0) {
+                        this.$.list.deselectItem(this.deleteItems[0])
                     }
                 }
+            }
+
+            _handleActionDeleteMultiple(e) {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerPictureListResults.is +
+                    '-action-delete-multiple', {
+                        bubbles: true,
+                        composed: true,
+                        detail: {
+                            picture: e.model.item
+                        }
+                    }));
             }
 
             _handleItemClick(e) {
