--- a/elements/crew-team-manager-roster/crew-team-manager-roster-detail-results.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-detail-results.html
@@ -131,10 +131,10 @@
 
                     <iron-list id="list" items="[[erg]]" as="item">
                         <template>
-                            <div class="erg" on-click="_handleItemClick">
+                            <div class="erg" on-tap="_handleItemClick">
                                 <div class="erg-info">
                                     <div class="erg-info-name">
-                                        [[item.number]], Model:[[item.model]]
+                                        [[item.number]] [[item.model]]
                                     </div>
                                 </div>
                             </div>
