--- a/elements/crew-team-manager-roster/crew-team-manager-roster-erg-list.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-erg-list.html
@@ -75,9 +75,9 @@
 
             <app-header slot="header" reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
+                    <paper-icon-button id="back" icon="arrow-back" on-tap="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Select Ergs To Add</div>
-                    <paper-icon-button id="add" icon="check" on-click="_handleActionAdd"></paper-icon-button>
+                    <paper-icon-button id="add" icon="check" on-tap="_handleActionAdd"></paper-icon-button>
                 </app-toolbar>
             </app-header>
 
