--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
@@ -91,10 +91,10 @@
 
             <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
+                    <paper-icon-button id="back" icon="arrow-back" on-tap="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Details</div>
-                    <paper-icon-button id="edit" icon="create" on-click="_handleActionEdit"></paper-icon-button>
-                    <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
+                    <paper-icon-button id="edit" icon="create" on-tap="_handleActionEdit"></paper-icon-button>
+                    <paper-icon-button id="delete" icon="delete" on-tap="_handleActionDelete"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
@@ -108,8 +108,8 @@
 
         <div id="fabs-layout">
             <div id="fabs">
-                <paper-fab id="race" class="fab" icon="gavel" on-click="_handleActionAddRace"></paper-fab>
-                <paper-fab id="picture" class="fab" icon="image:camera-roll" on-click="_handleActionAddPicture"></paper-fab>
+                <paper-fab id="race" class="fab" icon="gavel" on-tap="_handleActionAddRace"></paper-fab>
+                <paper-fab id="picture" class="fab" icon="image:camera-roll" on-tap="_handleActionAddPicture"></paper-fab>
                 <paper-fab id="add" class="fab" icon="icons:add"></paper-fab>
             </div>
         </div>
