--- a/elements/crew-team-manager-compare/crew-team-manager-compare-detail.html
+++ b/elements/crew-team-manager-compare/crew-team-manager-compare-detail.html
@@ -63,7 +63,7 @@
 
             <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
+                    <paper-icon-button id="back" icon="arrow-back" on-tap="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Details</div>
                 </app-toolbar>
             </app-header>
