--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-list-results.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-list-results.html
@@ -30,6 +30,12 @@
                 border-bottom: solid 1px grey;
             }
 
+            .boat-selected {
+                background-color: #ddd;
+                @apply(--layout-horizontal);
+                border-bottom: solid 1px grey;
+            }
+
             .boat-avatar {
                 margin: 8px;
             }
@@ -47,14 +53,35 @@
             .boat-info-location {
                 @apply(--paper-font-caption);
             }
+
+            .boat-avatar[reveal],
+            .check-avatar {
+                display: none;
+            }
+
+            .boat-avatar,
+            .check-avatar[reveal] {
+                display: inline-block;
+            }
+
+            .check-avatar[reveal] {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                margin: 8px;
+                width: 32px;
+                height: 32px;
+                border-radius: 50%;
+                background-color: #A3A3A3;
+            }
         </style>
 
-        <iron-list id="list" items="[[data]]" as="item">
+        <iron-list id="list" items="[[data]]" as="item" selected-items="{{deleteItems}}" selection-enabled multi-selection>
             <template>
-                <div class="boat" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]">
 
-                    <crew-team-manager-avatar class="boat-avatar" value="[[item.name]]"></crew-team-manager-avatar>
-                    <div class="boat-info">
+                    <crew-team-manager-avatar class="boat-avatar" reveal$="[[_isCheck(selected)]]" value="[[item.name]]" on-tap="_handleActionDeleteMultiple"></crew-team-manager-avatar>
+                    <paper-icon-button class="check-avatar" reveal$="[[_isCheck(selected)]]" icon="check"></paper-icon-button>
+                    <div class="boat-info"="_handleItemClick">
                         <div class="boat-info-name">
                             [[item.name]]
                         </div>
@@ -76,12 +103,63 @@
                 return 'crew-team-manager-fleet-list-results'
             }
 
+            static get observers() {
+                return [
+                    '_selectedChange(selected)'
+                ]
+            }
+
             static get properties() {
                 return {
                     data: {
                         type: Object,
                     },
+
+                    deleteItems: {
+                        type: Object,
+                        value: {}
+                    },
+
+                    selected: Boolean
+
                 }
+            }
+
+            _selectedChange(selected) {
+                if (!selected) {
+                    while (this.deleteItems.length > 0) {
+                        this.$.list.deselectItem(this.deleteItems[0])
+                    }
+                }
+            }
+
+            _computedClass(isSelected) {
+                let classes = 'boat';
+                if (isSelected) {
+                    classes += '-selected';
+                }
+                return classes;
+            }
+
+            _isCheck(isSelected) {
+                let value = false;
+                if (isSelected) {
+                    value = true;
+                }
+
+                return value;
+            }
+
+            _handleActionDeleteMultiple(e) {
+                this.reveal = true;
+                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetListResults.is +
+                    '-action-delete-multiple', {
+                        bubbles: true,
+                        composed: true,
+                        detail: {
+                            fleet: e.model.item
+                        }
+                    }));
             }
 
             _handleItemClick(e) {
