--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-oar-list-results.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-oar-list-results.html
@@ -52,7 +52,7 @@
 
         <iron-list id="list" items="[[data]]" as="item" selected-items="selectedItems" selection-enabled multi-selection>
             <template>
-                <div class$="[[_computedClass(selected)]]" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]"="_handleItemClick">
 
                     <crew-team-manager-avatar class="oar-avatar" value="[[item.name]]"></crew-team-manager-avatar>
                     <div class="oar-info">
