--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list-results.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list-results.html
@@ -58,7 +58,7 @@
 
         <iron-list id="list" items="[[data]]" as="item" selected-items="selectedItems" selection-enabled multi-selection>
             <template>
-                <div class$="[[_computedClass(selected)]]" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]"="_handleItemClick">
 
                     <crew-team-manager-avatar class="rigger-avatar" value="[[item.style]]"></crew-team-manager-avatar>
                     <div class="rigger-info">
