--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list-results.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list-results.html
@@ -52,7 +52,7 @@
 
         <iron-list id="list" items="[[data]]" as="item" elected-items="selectedItems" selection-enabled multi-selection>
             <template>
-                <div class$="[[_computedClass(selected)]]" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]"="_handleItemClick">
 
                     <crew-team-manager-avatar class="athlete-avatar" value="[[item.firstName]]"></crew-team-manager-avatar>
                     <div class="athlete-info">
