--- a/elements/crew-team-manager-oar/crew-team-manager-oar-list-results.html
+++ b/elements/crew-team-manager-oar/crew-team-manager-oar-list-results.html
@@ -16,16 +16,17 @@
 
             #list {
                 background-color: lightslategray;
-                /*@apply(--layout-vertical);*/
                 @apply(--layout-flex);
-                /*top: 0px;
-                bottom: 0px;
-                left: 0px;
-                right: 0px;*/
             }
 
             .oar {
                 background-color: white;
+                @apply(--layout-horizontal);
+                border-bottom: solid 1px grey;
+            }
+
+            .oar-selected {
+                background-color: #ddd;
                 @apply(--layout-horizontal);
                 border-bottom: solid 1px grey;
             }
@@ -47,14 +48,35 @@
             .oar-info-helper {
                 @apply(--paper-font-caption);
             }
+
+            .oar-avatar[reveal],
+            .check-avatar {
+                display: none;
+            }
+
+            .oar-avatar,
+            .check-avatar[reveal] {
+                display: inline-block;
+            }
+
+            .check-avatar[reveal] {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                margin: 8px;
+                width: 32px;
+                height: 32px;
+                border-radius: 50%;
+                background-color: #A3A3A3;
+            }
         </style>
 
-        <iron-list id="list" items="[[data]]" as="item">
+        <iron-list id="list" items="[[data]]" as="item" selected-items="{{deleteItems}}" selection-enabled multi-selection>
             <template>
-                <div class="oar" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]">
 
-                    <crew-team-manager-avatar class="oar-avatar" value="[[item.name]]"></crew-team-manager-avatar>
-                    <div class="oar-info">
+                    <crew-team-manager-avatar class="oar-avatar" reveal$="[[_isCheck(selected)]]" value="[[item.name]]" on-tap="_handleActionDeleteMultiple"></crew-team-manager-avatar>
+                    <paper-icon-button class="check-avatar" reveal$="[[_isCheck(selected)]]" icon="check"></paper-icon-button>
+                    <div class="oar-info" on-tap="_handleItemClick">
                         <div class="oar-info-name">
                             [[item.name]]
                         </div>
@@ -75,6 +97,12 @@
                 return 'crew-team-manager-oar-list-results'
             }
 
+            static get observers() {
+                return [
+                    '_selectedChange(selected)'
+                ]
+            }
+
             static get properties() {
                 return {
                     data: {
@@ -83,8 +111,53 @@
 
                     _name: {
                         type: String
+                    },
+
+                    deleteItems: {
+                        type: Object,
+                        value: {}
+                    },
+
+                    selected: Boolean
+
+                }
+            }
+
+            _selectedChange(selected) {
+                if (!selected) {
+                    while (this.deleteItems.length > 0) {
+                        this.$.list.deselectItem(this.deleteItems[0])
                     }
                 }
+            }
+
+            _computedClass(isSelected) {
+                let classes = 'oar';
+                if (isSelected) {
+                    classes += '-selected';
+                }
+                return classes;
+            }
+
+            _isCheck(isSelected) {
+                let value = false;
+                if (isSelected) {
+                    value = true;
+                }
+
+                return value;
+            }
+
+            _handleActionDeleteMultiple(e) {
+                this.reveal = true;
+                this.dispatchEvent(new CustomEvent(crewTeamManagerOarListResults.is +
+                    '-action-delete-multiple', {
+                        bubbles: true,
+                        composed: true,
+                        detail: {
+                            oar: e.model.item
+                        }
+                    }));
             }
 
             _handleItemClick(e) {
