--- a/elements/crew-team-manager-picture/crew-team-manager-picture-detail.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-detail.html
@@ -66,10 +66,10 @@
 
             <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
+                    <paper-icon-button id="back" icon="arrow-back" on-tap="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Details</div>
-                    <paper-icon-button id="edit" icon="create" on-click="_handleActionEdit"></paper-icon-button>
-                    <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
+                    <paper-icon-button id="edit" icon="create" on-tap="_handleActionEdit"></paper-icon-button>
+                    <paper-icon-button id="delete" icon="delete" on-tap="_handleActionDelete"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
