--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-list-results.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-list-results.html
@@ -16,16 +16,17 @@
 
             #list {
                 background-color: lightslategray;
-                /*@apply(--layout-vertical);*/
                 @apply(--layout-flex);
-                /*top: 0px;
-                bottom: 0px;
-                left: 0px;
-                right: 0px;*/
             }
 
             .rigger {
                 background-color: white;
+                @apply(--layout-horizontal);
+                border-bottom: solid 1px grey;
+            }
+
+            .rigger-selected {
+                background-color: #ddd;
                 @apply(--layout-horizontal);
                 border-bottom: solid 1px grey;
             }
@@ -47,15 +48,36 @@
             .rigger-info-helpers {
                 @apply(--paper-font-caption);
             }
+
+            .rigger-avatar[reveal],
+            .check-avatar {
+                display: none;
+            }
+
+            .rigger-avatar,
+            .check-avatar[reveal] {
+                display: inline-block;
+            }
+
+            .check-avatar[reveal] {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                margin: 8px;
+                width: 32px;
+                height: 32px;
+                border-radius: 50%;
+                background-color: #A3A3A3;
+            }
         </style>
 
 
-        <iron-list id="list" items="[[data]]" as="item">
+        <iron-list id="list" items="[[data]]" as="item" selected-items="{{deleteItems}}" selection-enabled multi-selection>
             <template>
-                <div class="rigger" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]">
 
-                    <crew-team-manager-avatar class="rigger-avatar" value="[[item.style]]"></crew-team-manager-avatar>
-                    <div class="rigger-info">
+                    <crew-team-manager-avatar class="rigger-avatar" reveal$="[[_isCheck(selected)]]" value="[[item.style]]" on-tap="_handleActionDeleteMultiple"></crew-team-manager-avatar>
+                    <paper-icon-button class="check-avatar" reveal$="[[_isCheck(selected)]]" icon="check"></paper-icon-button>
+                    <div class="rigger-info" on-tap="_handleItemClick">
                         <div class="rigger-info-name">
                             [[item.style]]
                         </div>
@@ -78,15 +100,63 @@
                 return 'crew-team-manager-rigger-list-results'
             }
 
+            static get observers() {
+                return [
+                    '_selectedChange(selected)'
+                ]
+            }
+
             static get properties() {
                 return {
                     data: {
                         type: Object,
-                    }
+                    },
+
+                    deleteItems: {
+                        type: Object,
+                        value: {}
+                    },
+
+                    selected: Boolean
 
                 }
             }
 
+            _isCheck(isSelected) {
+                let value = false;
+                if (isSelected) {
+                    value = true;
+                }
+
+                return value;
+            }
+
+            _selectedChange(selected) {
+                if (!selected) {
+                    while (this.deleteItems.length > 0) {
+                        this.$.list.deselectItem(this.deleteItems[0])
+                    }
+                }
+            }
+
+            _computedClass(isSelected) {
+                let classes = 'rigger';
+                if (isSelected) {
+                    classes += '-selected';
+                }
+                return classes;
+            }
+
+            _handleActionDeleteMultiple(e) {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerListResults.is +
+                    '-action-delete-multiple', {
+                        bubbles: true,
+                        composed: true,
+                        detail: {
+                            rigger: e.model.item
+                        }
+                    }));
+            }
 
             _handleItemClick(e) {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerListResults.is + '-action-detail', {
